이빨 div, 칫솔 div style 적용

--- a/app.html
+++ b/app.html
@@ -14,6 +14,33 @@
       width: 100vw;
       height: 100vh;
       background-color: azure;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    #root > div:nth-child(1){
+      width: 80vw;
+      height: 80vh;
+      background-image: url("https://img.freepik.com/free-vector/human-teeth-model-on-white-background_1308-108364.jpg");
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center;
+      display: flex;
+      position: relative;
+      left: 20vw;
+    }
+
+    #root > div:nth-child(2){
+      width: 30vw;
+      height: 30vh;
+      background-image: url('https://www.svgrepo.com/show/193689/toothbrush.svg');
+      background-repeat: no-repeat;
+      background-size: contain;
+      background-position: center;
+      transform: rotate( -140deg );
+      position: relative;
+      right: 30vw;
     }
   </style>
 </head>
