root, 이빨 div, 칫솔 div 변수 선언

--- a/app.html
+++ b/app.html
@@ -49,5 +49,17 @@
     <div></div>
     <div></div>
   </div>
+  <script>
+    const root = document.getElementById("root")
+    console.dir(root);
+
+    const teeth = root.children[0]
+    console.log(teeth)
+
+    const brush = root.children[1]
+    console.log(brush)
+
+    
+  </script>
 </body>
 </html>
