이벤트 함수 화살표함수로 작성방식 변경

--- a/app.html
+++ b/app.html
@@ -58,11 +58,11 @@
     console.log(brush)
 
 
-    brush.addEventListener('click', function(){
-      moveOne = setTimeout(function(){
+    brush.addEventListener('click', () => {
+      moveOne = setTimeout(() => {
         brush.style.right = "150px";
 
-        moveTwo = setTimeout(function(){
+        moveTwo = setTimeout(() => {
           brush.style.left = "350px";
         }, 300)
 
