--- a/app.html
+++ b/app.html
@@ -85,19 +85,27 @@
       }, 300)
       
       score.textContent = `양치 횟수 : ${event.detail}`;
-      
+
       if(event.detail >= 1){
-        const blood = document.createElement("div");
-        teeth.appendChild(blood);
-        console.dir(blood)
-        blood.style.width = "10vw"
-        blood.style.height = "10vw"
-        blood.style.backgroundImage = "url('https://www.svgrepo.com/show/163600/blood.svg')"
-        blood.style.backgroundPosition = "center";
-        blood.style.backgroundRepeat = "no-repeat";
-        blood.style.backgroundSize = "contain"
-        blood.style.position = "absolute";
-        blood.style.top = "200px";
+        setInterval(function(){
+
+          const blood = document.createElement("div");
+          teeth.appendChild(blood);
+          console.dir(blood)
+          blood.style.width = "10vw"
+          blood.style.height = "10vw"
+          blood.style.backgroundImage = "url('https://www.svgrepo.com/show/163600/blood.svg')"
+          blood.style.backgroundPosition = "center";
+          blood.style.backgroundRepeat = "no-repeat";
+          blood.style.backgroundSize = "contain"
+          blood.style.position = "absolute";
+
+          const x = Math.random() * (1000);
+          const y = Math.random() * (600);
+
+          blood.style.left = x + "px"
+          blood.style.top = y + "px"
+        }, 1000)
       }
 
     });
